Added contact page and additional bootstrap features

--- a/Content/app.css
+++ b/Content/app.css
@@ -1,6 +1,6 @@
 /*CSS codes go here */
-
-p{
-    font-family: calibri; 
+.firstSentence {
+    color: darkblue; 
     font-weight: bold; 
+    font-size: 1.1em; 
 }
